--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <style>
     main { height: 100%; display: grid; place-items: center; }
     canvas { border: 1px solid black; }
+    body { height: 100vh; width: 100%; margin: 0; }
+    button { font-size: 20pt; position: fixed; top: 1rem; left: 1rem; }
   </style>
 </head>
 <body
-  style="
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-  "
+  
 >
+<button id="button-run" onclick="run()">RUN</button>
 </body>
 </html>
